track *.psd files using Git LFS

--- a/query_chroma.ipynb
+++ b/query_chroma.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chroma_client = chromadb.PersistentClient(path=\".\")\n",
+    "chroma_client = chromadb.PersistentClient(path=\"db\")\n",
     "collection = chroma_client.get_collection(name=\"episodes\")"
    ]
   },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
